# sigai

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
sigai/: __init__.py  main.py
tests/: test_command_line.py  test_files_in_tests_directory.py  test_generate_summary.py  test_include_descriptions.py  test_main.py  test_mixed_files.py  test_no_files.py  test_only_init_files.py
