[tool.poetry]
name = "sigai"
version = "0.1.0"
description = ""
authors = ["Garrett Griffin-Morales <grgisme@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
pygithub = "^2.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
